--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/style.css" />
 	</head>
 	<body>
-		<h1>Welcome to codedamn</h1>
+		<h1>Welcome to codedamn1</h1>
 		<p>Hey there! This is a HTML/CSS/JS playground!</p>
 		<ul>
 			<li>You can edit these files....!</li>
